Improves the share buttons using Foundation icons.

--- a/languages/default.yml
+++ b/languages/default.yml
@@ -17,3 +17,5 @@ powered_by: Powered by
 rss_feed: RSS Feed
 category: Category
 tag: Tag
+share_on_fb: Share on Facebook
+share_on_twitter: Share on Twitter
