--- a/languages/hu.yml
+++ b/languages/hu.yml
@@ -19,3 +19,5 @@ powered_by: A <a href="http://hexo.io/" target="_blank">Hexo</a> hajtja.
 rss_feed: RSS feed
 category: Kategória
 tag: Címke
+share_on_fb: Megosztom Facebook-on
+share_on_twitter: Megosztom Twitter-en
