Fixes localization, starts working on header level switching.

--- a/languages/default.yml
+++ b/languages/default.yml
@@ -19,3 +19,6 @@ category: Category
 tag: Tag
 share_on_fb: Share on Facebook
 share_on_twitter: Share on Twitter
+by_year: By Year
+article_archive_date_format: MMM D
+no_title: (no title)
