--- a/languages/hu.yml
+++ b/languages/hu.yml
@@ -21,3 +21,6 @@ category: Kategória
 tag: Címke
 share_on_fb: Megosztom Facebook-on
 share_on_twitter: Megosztom Twitter-en
+by_year: Éves bontásban
+article_archive_date_format: MMM. D.
+no_title: (cím nélküli)
