Updates date displays.

--- a/languages/default.yml
+++ b/languages/default.yml
@@ -22,3 +22,5 @@ share_on_twitter: Share on Twitter
 by_year: By Year
 article_archive_date_format: MMM D
 no_title: (no title)
+post_made_at: Post made at
+post_updated_at: Post updated at
