--- a/languages/hu.yml
+++ b/languages/hu.yml
@@ -15,7 +15,7 @@ next_page: Következő oldal &raquo;
 newer: Újabb
 older: Régebbi
 share: Megosztás
-powered_by: A <a href="http://hexo.io/" target="_blank">Hexo</a> hajtja.
+powered_by: Ezt a blogot a <a href="http://hexo.io/" target="_blank">Hexo</a> statikus blogmotor hajtja.
 rss_feed: RSS feed
 category: Kategória
 tag: Címke
@@ -24,3 +24,5 @@ share_on_twitter: Megosztom Twitter-en
 by_year: Éves bontásban
 article_archive_date_format: MMM. D.
 no_title: (cím nélküli)
+post_made_at: "Készült: "
+post_updated_at: "Utoljára frissítve: "
